# welltegra.network

./: .artifactignore  .env.example  .gitattributes  .gitignore  .htaccess  .rebuild-timestamp  .rebuild-trigger  00_tooling.patch  01_ui.patch  404.html  AI-ASSISTANT-README.md  AI_COPILOT_PHYSICAL_CONSTRAINTS.md  AI_COPILOT_REDESIGN.md  ARCHAEOLOGY-REDESIGN-SUMMARY.md  ARCHITECTURE_CLEANUP.md  BRAHAN_README.md  BRAND_VOICE_GUIDE.md  BRUTAL_HONEST_AUDIT.md  CHATBOT_FIX_INSTRUCTIONS.md  CHECKLIST.md  CHROMEBOOK-PWA-CONVERSION-SUMMARY.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  COMPREHENSIVE_JOB_SEARCH_PACKAGE.md  CONSOLE_ERRORS_FIXED.md  CONTRIBUTING.md  DASHBOARD_CONCEPT_01_FLOW_DIAGRAM.html  DASHBOARD_CONCEPT_02_REALTIME_UI.html  DASHBOARD_CONCEPT_03_DATA_JOURNEY.html  DASHBOARD_CUSTOMIZATION_DESIGN.md  DASHBOARD_MOCKUP_HIGH_FIDELITY.md  DATA_INTEGRATION_SUMMARY.md  DATA_PROVENANCE.md  DEMO_PROGRAM_PLAN.md  DEMO_SCRIPT.md  DEMO_WALKTHROUGH.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  (+264 more)
BPT-PWA/: App.tsx  CHROMEBOOK-APP-GUIDE.md  PWA-SETUP.md  README.md  constants.tsx  convert-svg-icons.js  generate-icons.js  index.html  metadata.json  package-lock.json  (+3 more)
my_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_agent_structure.py
my_agent/.github/workflows/: ci.yml  dependency-review.yml
my_agent/docker/: web-server.py
my_agent/src/my_agent/: __init__.py  __main__.py  agent.py  api.py
my_agent/tests/: __init__.py  mock_w666_document.txt  test_agents.py
my_agent/web/: index.html
(+600 files in other folders)
