[project]
name = "dark-kenneth-triad"
version = "0.1.0"
description = "W666 Structural Sanity Audit System - A Claude Agent SDK with Vertex AI integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic[vertex]>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]

[project.scripts]
w666-audit = "my_agent.agent:main"
dark-kenneth = "my_agent.agent:main"
